objects/Condition_Report__c.object
<CustomObject>
    <description>This object receives fields from the condition_report, condition_report_document and saved_auctions tables in ACV Tools.</description>
    <fields>
        <fullName>ACV_Auction_Id__c</fullName>
        <description>auction.id</description>
        <label>ACV Auction Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_CR_Document_Id__c</fullName>
        <description>condition_report_document.id</description>
        <label>ACV CR Document Id</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_CR_Id__c</fullName>
        <description>condition_report.id</description>
        <externalId>true</externalId>
        <label>ACV CR Id</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACV_Condition_Report__c</fullName>
        <description>Link to the ACV Saved Auction/Condition Report in tools.</description>
        <formula>HYPERLINK(&quot;https://app.acvauctions.com/saved/&quot; &amp; ACV_Saved_Auction_Id__c,&quot;View VCR for Auction &quot; &amp; ACV_Saved_Auction_Id__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Condition Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Market_Report__c</fullName>
        <description>Link to the ACV Market Report in ACV Auctions App.</description>
        <formula>HYPERLINK(&quot;https://app.acvauctions.com/market-report?vin=&quot; &amp; VIN__c &amp; &quot;&amp;odometer=&quot; &amp; TEXT(Odometer__c), &quot;View AMR for Vehicle &quot; &amp; VIN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV Market Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACV_Saved_Auction_Id__c</fullName>
        <description>saved_auctions.id</description>
        <externalId>true</externalId>
        <label>ACV Saved Auction Id</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AMP_ML_Score__c</fullName>
        <description>Populated via /PrescreenService/AmpRequest to determine if a CR needs a prescreen based on AMP ML From R&amp;D</description>
        <label>AMP ML Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Arb_Guard_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Arb Guard Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Arb_Risk_Categories__c</fullName>
        <description>JSON list of the Arb Risk categories through the ArbGuard endpoint</description>
        <label>Arb Risk Categories</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Auction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Auction</label>
        <referenceTo>Auction__c</referenceTo>
        <relationshipLabel>Condition Reports</relationshipLabel>
        <relationshipName>Condition_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_sell__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Awaiting_Floor_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CR has been reviewed and Floor price has been populated with &lt;20 value or +999999</description>
        <label>Awaiting Floor Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks when VCI scans the VIN</description>
        <label>CR Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Doc_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>condition_report_document.launchable</description>
        <label>CR Doc Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CR_Doc_CreateDate__c</fullName>
        <description>condition_report_document.created</description>
        <label>CR Doc CreateDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Doc_LastUpdated__c</fullName>
        <description>condition_report_document.updated</description>
        <label>CR Doc LastUpdated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Review_Date_Time__c</fullName>
        <description>Date/Time CR Review field is set to TRUE (Populated via workflow/field update)</description>
        <label>CR Review Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_Review_Time_Minus_45__c</fullName>
        <formula>CR_Review_Date_Time__c  - 45 * 0.00069</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CR Review Time Minus 45</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_in_review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked once CR Doc complete but floor price is null</description>
        <label>CR in review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_of_Most_Recent_Recommended_Price__c</fullName>
        <description>Stamps the created date of the most recent Recommended Price record.</description>
        <label>Date of Most Recent Recommended Price</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <description>Holds the Dealer Id of the Dealership attached</description>
        <formula>Dealership__r.Dealership_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <description>This holds the API name of the Dealership&apos;s Dealer Type</description>
        <formula>TEXT(Dealership__r.Dealer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is brought in through integration with acv-api, it is the dealer_id associated with the Saved_Auction_id</description>
        <label>Dealership</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Condition Reports</relationshipLabel>
        <relationshipName>Condition_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <label>Floor Price</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inspection_Guid__c</fullName>
        <description>Inspection Guid generated for SIA records</description>
        <label>Inspection Guid</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inventory_Life_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated with the Inventory Life Cycle record this CR Relates to.</description>
        <label>Inventory Life Cycle</label>
        <referenceTo>Inventory_Life_Cycle__c</referenceTo>
        <relationshipLabel>Condition Reports</relationshipLabel>
        <relationshipName>Condition_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMR_AutoCheck_URL__c</fullName>
        <description>Link to the MMR AutoCheck page.</description>
        <formula>HYPERLINK(&quot;https://m.manheim.com/mobile/vin/summary?vin=&quot; &amp; VIN__c &amp; &quot;&amp;mileage=&quot; &amp; TEXT(Odometer__c) , &quot;AutoCheck URL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMR AutoCheck URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMR_Link__c</fullName>
        <description>Link to the main MMR Report page.</description>
        <formula>HYPERLINK(&quot;https://mmr.manheim.com/?WT.svl=m_uni_hdr_sell&amp;country=US&amp;mid=200708003280006&amp;popup=true&amp;source=man&amp;vin=&quot; &amp; VIN__c &amp; &quot;&amp;mileage=&quot; &amp; TEXT(Odometer__c), &quot;View MMR for Vehicle &quot; &amp; VIN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MMR Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <description>Make field populated via the Vehicle lookup</description>
        <formula>Vehicle__r.make__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model field populated via Vehicle lookup</description>
        <formula>Vehicle__r.model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Recommended_Price_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lists the User who created the most recent Recommended Price</description>
        <label>Most Recent Recommended Price Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Condition_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Odometer__c</fullName>
        <description>This field is populated through inbound integration from the Saved_auctions table</description>
        <label>Odometer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Percent_RecPrices_Accepted__c</fullName>
        <description>Percent of Recommended Prices Accepted for this Account.</description>
        <formula>Dealership__r.Percent_RecPrices_Accepted__c</formula>
        <label>% RecPrices Seller Accepted</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Percentage_RecPrices_Accepted__c</fullName>
        <description>Percentage of Recommended Prices Accepted for this Account.</description>
        <formula>Dealership__r.Percentage_RecPrices_Accepted__c</formula>
        <label>% RecPrices Accepted for this Seller</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physical_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected this indicates the CR was physically reviewed by a human being.</description>
        <label>Physical Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommended_Price_Ceiling__c</fullName>
        <description>The ceiling price from the most recent recommended price (populated by Recommend a Price! flow).</description>
        <label>Recommended Price Ceiling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recommended_Price_Floor__c</fullName>
        <description>The floor price from the most recent recommended price (populated by Recommend a Price! flow).</description>
        <label>Recommended Price Floor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <formula>Dealership__r.Sales_Region_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trim__c</fullName>
        <description>This field is populated through inbound integration from the Saved_auctions table</description>
        <label>Trim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Selected_Trim__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field is calculated based on if a trim was automatically selected for a condition report or if a user manually selected one. It uses the following formula through integration:
IF(
            ((SELECT COUNT(DISTINCT trim)
              FROM vehicle_trims vt
              WHERE sa.vehicle_id = vt.vehicle_id
              ) &gt; 1), &apos;true&apos;, &apos;false&apos;
        )</description>
        <label>User Selected Trim</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VCI_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who starts the Inspection.</inlineHelpText>
        <label>VCI Creator</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Condition Reports (VCI Creator)</relationshipLabel>
        <relationshipName>Condition_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VCI__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who submits  the Condition Report.</inlineHelpText>
        <label>VCI</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Condition Reports</relationshipLabel>
        <relationshipName>Condition_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <description>saved_auctions.vin</description>
        <label>VIN</label>
        <length>17</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Auctions_Link__c</fullName>
        <description>Link to the Vehicles Auction in ACV Tools.</description>
        <formula>HYPERLINK(&quot;https://tools.acvauctions.com/vehicle/&quot;+VIN__c+&quot;/auctions&quot;, &quot;Vehicle Auctions &quot;+VIN__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the Vehicles Auction in ACV Tools.</inlineHelpText>
        <label>Vehicle Auctions Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Information__c</fullName>
        <formula>&apos;Selling Dealership: &apos; &amp; Vehicle__r.Most_Recent_Seller__r.Name &amp;
 BR() &amp;
&apos;VIN: &apos; &amp; Vehicle__r.vin__c &amp;
 BR() &amp;
&apos;Make: &apos; &amp; Vehicle__r.make__c &amp;
 BR() &amp;
&apos;Model: &apos; &amp; Vehicle__r.model__c &amp;
 BR() &amp;
&apos;Year: &apos; &amp; TEXT( Vehicle__r.Year__c )</formula>
        <label>Vehicle Information</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Condition Reports</relationshipLabel>
        <relationshipName>Condition_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Waived_by_Pricing_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, CR is removed from the pricing team&apos;s queue</description>
        <label>Waived by Pricing Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_Day_RecPrices_Accepted__c</fullName>
        <description>The total number of times the dealer accepted the recommended price over the last 90 days.</description>
        <formula>TEXT(Dealership__r.Num_90_Day_RecPrices_Accepted__c) + &apos; of &apos; +  TEXT(Dealership__r.Num_90_Day_RecPrices_Avail_to_Accept__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 Day RecPrices Seller Accepted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X90_Day_Sell_Through_Rate__c</fullName>
        <formula>Dealership__r.X90_Day_Sell_Thru_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 Day Sell Through Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X90_Day_Seller_Sold__c</fullName>
        <description>The sum of all sold vehicles by the dealer over the last 90 days.</description>
        <formula>Dealership__r.Total_Sold_the_Past_90_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 Day Seller Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Year populated with lookup to Vehicle Object</description>
        <formula>TEXT(Vehicle__r.Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Condition Report</label>
    <listViews>
        <fullName>This_Months_Condition_Reports</fullName>
        <columns>NAME</columns>
        <columns>Vehicle__c</columns>
        <columns>VCI_Creator__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>VIN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:60</value>
        </filters>
        <label>This Months Condition Reports</label>
        <sharedTo>
            <role>System_Admin</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Condition Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>